--- a/distributed key-value storage algorithm.tex
+++ b/distributed key-value storage algorithm.tex
@@ -61,6 +61,7 @@ mathescape=true}
 \onehalfspacing
 \section*{Algorithm Description}
 
+In this table, we use the initialism ``OW'' to stand for Outside World: i.e., an arbitrary computer outside of our system.
 
 \setlength{\extrarowheight}{5pt}
 \setlength{\LTcapwidth}{\textwidth}
@@ -75,28 +76,28 @@ mathescape=true}
 \endfoot
 \endlastfoot
 
-Store Request. Sent by either OW or a \sp to a \sp to store \tt{value} for \tt{key}. These are only ever received by \sp es in the network. When an \sp receives such a message, it first checks if the hashed key is equal to its own ID. If it is, then it stores the value for the specified key, and sends a \tt{backup\_store} message to its \sh. If not, it forwards it to the closest \sp to the destination (closest here meaning nearest process \textit{before} the destination, since processes can only send messages forward in the ring). &
+Store Request. Sent by either OW or a \sp{} to a \sp{} to store \tt{value} for \tt{key}. These are only ever received by \sp{} es in the network. When an \sp{} receives such a message, it first checks if the hashed key is equal to its own ID. If it is, then it stores the value for the specified key, and sends a \tt{backup\_store} message to its \sh. If not, it forwards it to the closest \sp{} to the destination (closest here meaning nearest process \textit{before} the destination, since processes can only send messages forward in the ring). &
 \{Pid, Ref, store, Key, Value\} \\
 
-Stored Confirmation. Sent by an \sh to OW after the corresponding request has been stored in the proper \sp and the data has been backed up in the \sh sending the message. &
+Stored Confirmation. Sent by an \sh{} to OW after the corresponding request has been stored in the proper \sp{} and the data has been backed up in the \sh{} sending the message. &
 \{Ref, stored, Old\_Value\} \\
 
-Retrieve Request. Sent by OW and \sp es; received by \sp es. When a \sp receives such a message, it checks if the hash of the key is equal to its own process ID. If it is, the \sp has the value for that key, and replies with a retrieve response. If not, it forwards it to the closest \sp to the destination (closest as defined above). &
+Retrieve Request. Sent by OW and \sp es; received by \sp es. When a \sp{} receives such a message, it checks if the hash of the key is equal to its own process ID. If it is, the \sp{} has the value for that key, and replies with a retrieve response. If not, it forwards it to the closest \sp{} to the destination (closest as defined above). &
 \{Pid, Ref, retrieve, Key\} \\
 
-Retrieve Response. Sent by \sp es to the OW. After a \sp receives a retrieve request meant for it, it looks up the relevant value and reports it to the requesting process in the OW. &
+Retrieve Response. Sent by \sp es to the OW. After a \sp{} receives a retrieve request meant for it, it looks up the relevant value and reports it to the requesting process in the OW. &
 \{Ref, retrieved, Value\} \\
 
-First Key Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp receieves this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a first key computation by adding the ref to its list of ongoing computations and sending a First Key Computation message to the next node in the ring. &
+First Key Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp{} receieves this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a first key computation by adding the ref to its list of ongoing computations and sending a First Key Computation message to the next node in the ring. &
 \{Pid, Ref, first\_key\} \\
 
-Last Key Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp receieves this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a last key computation by adding the ref to its list of ongoing computations and sending a Last Key Computation message to the next node in the ring. &
+Last Key Request. Sent by the OW to \sp{} es, and by \sp es to \sh s. When a \sp{} receives this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a last key computation by adding the ref to its list of ongoing computations and sending a Last Key Computation message to the next node in the ring. &
 \{Pid, Ref, last\_key\} \\
 
-Num Keys Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp receieves this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a num keys computation by adding the ref to its list of ongoing computations and sending a Num Keys Computation message to the next node in the ring. &
+Num Keys Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp{} receieves this, it will forward the message up to its \sh. When such a message is received by a \sh, it will start a num keys computation by adding the ref to its list of ongoing computations and sending a Num Keys Computation message to the next node in the ring. &
 \{Pid, Ref, num\_keys\} \\
 
-Node List Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp receieves this, it will forward the message up to its \sh When such a message is received by a \sh, it will query the global registry for the list of nodes and report that data to the requester. &
+Node List Request. Sent by the OW to \sp es, and by \sp es to \sh s. When a \sp{} receieves this, it will forward the message up to its \sh.  When such a message is received by a \sh, it will query the global registry for the list of nodes and report that data to the requester. &
 \{Pid, Ref, node\_list\} \\
 
 Request Result. Sent to the OW by a \sh. This reports the result of a First Key, Last Key, Num Keys, or Node List Request to the original requester after the \sh s have finished computing the result. &
@@ -108,16 +109,16 @@ Failure Notification. Sent to the OW by \sh s or \sp es to notify the OW that a 
 Leave Request. Sent by the OW to \sp es and by \sp es to \sh s. When received by a \sp, it forwards the message to its \sh. When received by an \sh, it immediately kills all \sp es on the node it is running on, and kills itself. &
 \{Pid, Ref, leave\} \\
 
-Backup Store Request. Sent by \sh and \sp, and received by \sh. If a \sh receives this message from a \sp, it forwards the message to the next \sh. If an \sh receives this message from another \sh, it will back up the data in the message, then notify the OW of the store's success and the old value. & 
+Backup Store Request. Sent by \sh{} and \sp, and received by \sh. If a \sh{} receives this message from a \sp, it forwards the message to the next \sh. If an \sh{} receives this message from another \sh, it will back up the data in the message, then notify the OW of the store's success and the old value. & 
 \{Pid, Ref, backup\_store, Key, Value, ProcessID\} \\
 
 Messages About Keys.  Sent and received by \sh.  If \tt{Ref} is in the list of the receiver's in-progress computations, the computation is over and the received message contains the result. The receiver will then send the result \tt{ComputationSoFar} back to the OW.  Otherwise, it will update \tt{ComputationSoFar} with its relevant value and forward the message to the next node's \sh.  &
 \{Pid, Ref, *\_key, ComputationSoFar\} \\
 
-Joining Behind. Received and sent by \sh. A \sh will send this when it is joining to the next node's \sh to indicate that it is joining behind the recipient in the ring. When received, send all stored backup data to the sender, then delete all backup data for processes numbered less than \tt{NodeID}. &
+Joining Behind. Received and sent by \sh. A \sh{} will send this when it is joining to the next node's \sh{} to indicate that it is joining behind the recipient in the ring. When received, send all stored backup data to the sender, then delete all backup data for processes numbered less than \tt{NodeID}. &
 \{Pid, joining\_behind, NodeID\} \\
 
-Joining in Front.  Received and sent by \sh. A \sh will send this when it is joining to the previous node's \sh to indicate that it is joining in front of the recipient in the ring. When receiving such a message, % if your ID is equal to \tt{DestID}, 
+Joining in Front.  Received and sent by \sh. A \sh{} will send this when it is joining to the previous node's \sh{} to indicate that it is joining in front of the recipient in the ring. When receiving such a message, % if your ID is equal to \tt{DestID}, 
 kill the data \sp es that the new node is now running (i.e. the ones numbered from \tt{NodeID} to the ID of the node after the new one. &
 \{joining\_front, NodeID, DestID\} \\
 
@@ -143,15 +144,17 @@ All data send message.  Received by \sh{} and sent by \sp.  The \sh{} adds the r
 
 \section*{Algorithm Setup}
 
+In this problem, we have a setup of Erlang nodes arranged in a ring.  Communications may occur across ``chords'' of the ring according to specifications laid out in the assignment.  The important part of the communication restrictions for the purposes of our implementation is that a non-storage process on a given node is guaranteed to be able to send messages to a non-storage process on the node after it in the ring.
+
 \subsection*{Types of Processes}
 
-Our system involves two types of processes: \sp es and handlers. The storage nodes are responsible for the primary data storage in the system (both storing and retrieving), and the handlers are reponsible for meta-storage stuff, such as backing up of data and handling snapshot-related functionality. On a given Erlang node, there will always be exactly one handler running, and some number of \sp es. In our system, the data on a \sp is backed up by the handler on the node in front of the processes node.
+Our system involves two types of processes: \sp es and \sh s. We have the \sp es responsible for the primary data storage in the system (both storing and retrieving), and the \sh s reponsible for meta-storage functions including the backing up of data and the handling of snapshot-related functionality. On a given Erlang node, there will always be exactly one handler running, and some number of \sp es. In our system, the data on a \sp{} is backed up by the handler on the node ``in front'' of the processes node.
 
 \subsection*{Storage Processes}
 
-\sp es in our system are responsible for receiving all messages from the outside world. When a \sp gets a store message, they forward it to the closest \sp to the destination. When the correct \sp gets the store request, it stores the data and notifies its \sh. When an \sp gets a retrieve message, it forwards it along until it gets to the correct \sp, which reports to the outside world. Finally, \sp es can easily handle \tt{node\_list} messages, as they have access to the global registry. All other messages received from the outside world are simply forwarded to the \sp 's handler. A \sp has only one possible state, that of waiting for messages. For a more detailed description of what messages a \sp sends and receives and what actions it takes upon receiving these messages, refer to the message description table.
+\sp es in our system are responsible for receiving all messages from the outside world. When a \sp{} gets a store message, they forward it to the closest \sp{} to the destination. When the correct \sp{} gets the store request, it stores the data and notifies its \sh. When an \sp{} gets a retrieve message, it forwards it along until it gets to the correct \sp, which reports to the outside world. Finally, \sp es can easily handle \tt{node\_list} messages, as they have access to the global registry. All other messages received from the outside world are simply forwarded to the \sp 's handler. A \sp{} has only one possible state, that of waiting for messages. For a more detailed description of what messages a \sp{} sends and receives and what actions it takes upon receiving these messages, refer to the message description table.
 
-In our system, a \sp stores the following information:
+In our system, a \sp{} stores the following information:
 \begin{description}
 \item [m] The size of the system, so that it knows what other processes it can message.
 \item [myID] The ID of the \sp.
@@ -161,7 +164,7 @@ In our system, a \sp stores the following information:
 
 \subsection*{Handler}
 
-Handlers are responsible for everything else in the system. They handle all requests related to system snapshots, manage when \sp{}s should be started or stopped due to rebalancing when nodes join and leave, and keep backups of data. Specifically, the \sp for a given node backs up all data for the node behind it. If the node behind it dies, it will use this backup data to start all \sp es that died, ensuring that no data is lost. For a more detailed description of what messages a \sh sends and receives and what actions it takes upon receiving these messages, refer to the message description table.
+Handlers are responsible for everything else in the system. They handle all requests related to system snapshots, manage when \sp es should be started or stopped due to rebalancing when nodes join and leave, and keep backups of data. Specifically, the \sp{} for a given node backs up all data for the node behind it. If the node behind it dies, it will use this backup data to start all \sp es that died, ensuring that no data is lost. For a more detailed description of what messages a \sh sends and receives and what actions it takes upon receiving these messages, refer to the message description table.
 
 In our system, a \sh stores the following information:
 \begin{description}
@@ -179,13 +182,13 @@ In our system, a \sh stores the following information:
 
 \section*{Algorithm Description \& Correctness}
 The setup:
-Each node has a backup of the node preceding it, held by a non-\sp for that node that we call the handler, since it also handles much of the inter-node communication. Each node is listening to the preceding node for crashes. In this way each node has one node that it is responsible for and one that is responsible for it.
+Each node has a backup of the node preceding it, held by a non-storage process for that node that we call the \sh, since it also handles much of the inter-node communication. Each node is listening to the preceding node for crashes. In this way each node has one node that it is responsible for and one that is responsible for it.
 
 When a node enters the system, it first finds the location in the system it should be at. To do so, it finds the node that has the most \sp es and joins such that the new node takes over half of these processes. The new node grabs the entire backup data of the node in front of it (since this is backing up the data that the new node's \sp es will be responsible for); it also tells next node to delete the first half of its backup data since the new node will now be backing it up. The new node uses the first half of that data (that is, data corresponding to processes behind it) to create its backup and the other half to start the \sp es it will be responsible for. Additionally, it messages the node behind it to stop running the relevant processes so the new node can run them. In this way, a joining node only needs to talk to two other nodes, the ones that it will be adjacent to. Thus, our system maintains its functionality and correctness when new node's join, as no information is lost and everything stays backed up.
 
 When a node crashes or leaves, the next node finds out, as the next node is the only one listening to it. Since it has the entire backup data of that node, it can immediately startup all of the processes that just died. So it immediately takes over for the dead node, changing its own node number to the one of the deceased. Then, since we lost the backup data of the dead node, it sends a request around the ring to the node just previous to it to get all the data on that node's processes. This takes a maximum of $m$ messages, where there are $2^m$ processes. In this way we can get the system back up and running immediately and then, while still accepting requests from the outside world, start rebuilding the back up data. When a node dies, the node in front of it takes over for it. This method ensures that our system is correct when nodes die, as the node in front of it has the full backup data for the node that died. Thus, our system works correctly even when nodes die, and doesn't lose any data.
 
-To ensure redundancy, a \sp never communicates back to the outside world directly when a store request comes in. Instead, after the store request is forwarded to the correct \sp, that process stores the new key-value pair and tells its handler process that it did so. The handler then sends this to the next node to be backed up. That next node will then notify the outside world that the value has been stored after it stores the backup. This ensures every store request has been backed up before letting the outside world know that the store is completed. Also, very few messages need to be passed. It takes a maximum of $m$ messages to get the store request to the right \sp and then a couple more after that to back the data up and respond to the outside world, since the next node is guaranteed to be visible to the node that has that \sp. This is part of why we chose to have nodes store the back up of the previous node.
+To ensure redundancy, a \sp{} never communicates back to the outside world directly when a store request comes in. Instead, after the store request is forwarded to the correct \sp, that process stores the new key-value pair and tells its handler process that it did so. The handler then sends this to the next node to be backed up. That next node will then notify the outside world that the value has been stored after it stores the backup. This ensures every store request has been backed up before letting the outside world know that the store is completed. Also, very few messages need to be passed. It takes a maximum of $m$ messages to get the store request to the right \sp{} and then a couple more after that to back the data up and respond to the outside world, since the next node is guaranteed to be visible to the node that has that \sp. This is part of why we chose to have nodes store the back up of the previous node.
 
 Messages about the system, like first-key and last-key, are forwarded directly to the handler process to take care of. The process will start a message that will go around the ring of nodes and will store that node's contribution to calculating the requested computation. Since each handler has a backup of the previous node, it doesn't need to communicate directly with each of the processes, but instead just sees if the first-key that has been found is better or worse than it's first key, or similar comparison for the other key requests. Once a handler gets its message back, it can tell the outside person the result of the snapshot. The runtime of these system processes scales with the number of nodes. They are guaranteed to work if the a node doesn't crash mid computation. Each node's computation will be constant since it can keep track of the first key, the last key, and the number of keys in it's back up as store requests come in. And since a completely stored value is only considered complete once the handler has backed up one up, we're guaranteed to be accurate.
 
