--- a/distributed key-value storage algorithm.tex
+++ b/distributed key-value storage algorithm.tex
@@ -117,7 +117,7 @@ Overall, our system's correctness argument is fairly basic. The system works cor
 
 \section*{Testing}
 
-We tested our code in a variety of ways, largely using the test scripts contained in \tt{t.erl}. 
+We tested our code in a variety of ways, largely using the test scripts contained in \tt{t.erl}. First, we started a node
 
 In this table, we use the initialism ``OW'' to stand for Outside World: i.e., an arbitrary computer outside of our system.
 
