--- a/distributed key-value storage algorithm.tex
+++ b/distributed key-value storage algorithm.tex
@@ -14,9 +14,7 @@
 \usepackage{tikz}
 \usepackage{tkz-graph}
 \usepackage{listings}
-%\usepackage{slashbox}
 \usepackage{array}
-%\usepackage{logicsym}
 \usepackage{amssymb}
 \usepackage{etoolbox}
 \usepackage{pdfpages}
@@ -58,7 +56,7 @@ mathescape=true}
 \maketitle
 
 
-%\onehalfspacing
+\onehalfspacing
 %\section*{Algorithm Description}
 
 \section*{Algorithm Setup}
@@ -115,13 +113,13 @@ Retrieve requests are the only messages that don't involve a handler at all. The
 
 Overall, our system's correctness argument is fairly basic. The system works correctly when the system remains static, as store requests work and ensure that the data is both in the correct storage node and backed up before they finish. When nodes join, we ensure that all data remains backed up, so that the state of our systems stays correct. Finally, when nodes die, other nodes immediately step in and replace the dead \sp es using the backup data, and quickly work to replace the backup that was lost, so that all data in the system is backed up. Thus, our distributed hashtable algorithm is correct even in the face of node's joining and leaving.
 
-In this table, we use the initialism ``OW'' to stand for Outside World: i.e., an arbitrary computer outside of our system.
 
+\singlespacing
 \setlength{\extrarowheight}{5pt}
 \setlength{\LTcapwidth}{\textwidth}
 
 \begin{longtable}{p{4.5in}T}
-\caption{Description of messages in the system}
+\caption{Description of messages in the system.  In this table, we use the initialism ``OW'' to stand for Outside World: i.e., an arbitrary computer outside of our system.}
 \label{msgTable}\\
 \textbf{Message Description} & \textbf{Erlang Pattern} \\
 \hline
